color generator - fix spacing

--- a/src/projects/ColorGenerator/colorGenerator.module.css
+++ b/src/projects/ColorGenerator/colorGenerator.module.css
@@ -2,7 +2,13 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 2em;
+    gap: 1em;
+    flex-wrap: wrap;
+    margin: 2em 0;
+}
+
+.heading_container > h1 {
+    margin: 0;
 }
 
 .input_container{
